saba-ja: fixed filter box spacing

--- a/src/fprime_gds/flask/static/css/fpstyle.css
+++ b/src/fprime_gds/flask/static/css/fpstyle.css
@@ -73,12 +73,6 @@ body, .fp-full-height {
     display: flex;
     flex-direction: column;
 }
-.fp-flex-repeater-margin {
-    margin-top: 1em;
-}
-.fp-filter-box {
-    margin-bottom: 1em;
-}
 .fp-flex-header {
     flex-grow: 0;
 }
